Fixed a column gap flexbox as not supported in chrome yet

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ a:focus {
 }
 .container {
   display: flex;
-  column-gap: 50px;
   margin: 0 100px;
 }
 .illustration-mockup {
@@ -28,6 +27,7 @@ a:focus {
   flex-shrink: 1.6;
   line-height: 1.5;
   margin-top: 30px;
+  margin-left: 50px;
 }
 .intro__title {
   font-family: 'Poppins', sans-serif;
